# CV-FLOW

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_REFERENCE.md  README.md  docker-compose.yml  patch_samples.py  plan.md  pyproject.toml  start_local.ps1
backend/: .env.example  Dockerfile  alembic.ini  mcp_server.py  requirements.txt
backend/app/: config.py  database.py  db.py  guide_generator.py  main.py  pipeline_store.py  schemas.py  validator.py
backend/app/api/: compiler.py  datahub.py  execution.py  facedb.py  guide.py  logging_db.py  models.py  nodes.py  pipeline.py  pipelines.py  python_lsp.py  router.py  system.py  topics.py
backend/app/models/: compiled_node.py  datahub.py  model_registry.py  pipeline.py
backend/app/schemas/: compiler.py  execution.py  model_registry.py  pipeline.py
backend/app/services/: compiler_service.py  execution_db.py  execution_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_model_registry_v2_and_datahub.py
cv_flow/: __init__.py  cli.py  elastic.py  executor.py  node.py
cv_flow/dam/: __init__.py  bus.py  cuda_bus.py  merge.py  round_robin.py
cv_flow/nodes/: __init__.py  _catalog.py  camera.py  draw.py  inference.py  output.py  postprocess.py  preprocess.py  tee.py  tracking.py
cv_flow/topic/: parser.py  publisher.py  subscriber.py  topic.py  types.py
cv_flow/topic_templates/: annotated_frame.topic  audio_pcm.topic  camera_frame.topic  depth_frame.topic  detections.topic  embedding.topic  stream_jpeg.topic  tracked.topic  yolo_input.topic  yolo_raw.topic
engine/: SDK_GUIDE.md  main.py  requirements.txt
engine/core/: autoscaler.py  dam.py  frame_context.py  node_registry.py  node_worker.py  orchestrator.py  pipeline_builder.py  pipeline_runner.py  pipeline_runner_mp.py
engine/cpp_bridge/: context_shm.py  loader.py
engine/data/: logging_db.py  vector_store.py
engine/model_hub/: face_downloader.py  hot_reload.py  onnx_inspector.py  yolo_downloader.py
engine/nodes/: base.py  python_code_node.py  sdk.py  user_node.py
engine/nodes/cpp/: cpp_node.py
engine/nodes/face/: embedding.py  face_align.py  face_db.py  face_detect.py  face_embed.py  face_enroll.py  face_gate.py  face_seen_log.py  face_vector_db.py
engine/nodes/input/: camera.py  image_directory.py  rtsp_stream.py  usb_camera.py  video_file.py
engine/nodes/output/: kafka_produce.py  mqtt_publish.py  stream_viewer.py  trigger_webhook.py  video_writer.py
engine/nodes/processing/: affine_transform.py  blur.py  color_convert.py  corner_detect.py  crop_bbox.py  draw_bbox.py  edge_detect.py  model_inference.py  morph.py  postprocess_nms.py  preprocess.py  resize.py  threshold.py
engine/nodes/samples/: __init__.py  fps_limiter.py
engine/nodes/samples/cpp/: CMakeLists.txt  gaussian_blur_node.cpp
engine/nodes/spatial/: counter.py  draw_line.py  draw_roi.py  object_tracker.py  track_db.py
engine/nodes/utility/: filter_node.py  param_node.py  pipeline_output.py  python_function.py
engine/samples/: multi_camera_shared_model.py  people_counter.json  yolo_detection_usb.json
engine/streaming/: ws_server.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  compiler.ts  execution.ts  models.ts  pipelines.ts
frontend/src/components/canvas/: PipelineCanvas.tsx
frontend/src/components/nodes/: CVFlowNode.tsx
frontend/src/components/nodes/base/: BaseNode.tsx
frontend/src/components/nodes/cpp/: CppFunctionNode.tsx
frontend/src/components/nodes/input/: CameraNode.tsx  VideoFileNode.tsx
frontend/src/components/nodes/output/: StreamViewerNode.tsx
frontend/src/components/nodes/processing/: ModelInferenceNode.tsx
frontend/src/components/nodes/spatial/: CounterNode.tsx
frontend/src/components/panels/: ExecutionPanel.tsx  NodePalette.tsx  PropertyPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: executionStore.ts  pipelineStore.ts  uiStore.ts
frontend/src/types/: nodes.ts  pipeline.ts  websocket.ts
frontend/src/utils/: nodeRegistry.ts  pipelineDeserializer.ts  pipelineSerializer.ts
frontend/static/: app.js  datahub.js  index.html  nodes.js  samples.js
scripts/: bench_cv_flow_pipeline.py  bench_inference.py  bench_naive_pipeline.py  build_wheel.sh  seed_datahub.py  smoke_pipeline.py
scripts/deepstream_bench/: Makefile  README.md  config_infer_primary_yolov8.txt  deepstream_app_config_camera.txt  deepstream_app_config_file.txt  nvdsinfer_yolov8_parser.cpp
shared/cpp/: CMakeLists.txt.template
shared/cpp/examples/blur_node/: CMakeLists.txt  node.cpp
shared/cpp/examples/custom_filter_node/: node.cpp
shared/cpp/include/cv_flow/: context.h  helpers.hpp  node.h  port_bus.h
shared/schemas/: model_config_schema.json  pipeline_schema.json
tests/: conftest.py  test_catalog.py  test_cli.py  test_elastic.py  test_executor.py  test_model_api.py  test_model_node_e2e.py  test_node.py  test_onnx_inspector.py
tests/backend/: test_api_guide.py  test_api_nodes.py  test_api_pipeline.py  test_pipeline_store.py
tests/dam/: test_bus.py  test_cuda_bus.py  test_merge.py  test_round_robin.py
tests/nodes/: test_camera.py  test_draw.py  test_inference.py  test_integration_pipeline.py  test_postprocess.py  test_preprocess.py  test_tee.py  test_tracking.py
tests/topic/: test_parser.py  test_publisher.py  test_subscriber.py  test_topic.py  test_topic_templates.py  test_types.py
